# vesper

./: Cargo.toml  README.md
crates/vesper/: Cargo.toml
crates/vesper/src/: config.rs  document.rs  lib.rs  main.rs  position.rs  server.rs  store.rs  workspace.rs
crates/vesper/src/compiler/: analyze.rs  builtins.rs  guard.rs  mod.rs  symbols.rs  tokens.rs
crates/vesper/tests/: corpus.rs
editors/nvim/ftdetect/: dusk.lua
editors/nvim/ftplugin/: dusk.lua
editors/nvim/lua/: vesper.lua
