[package]
name = "vesper"
description = "Language server for the dusk programming language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "vesper"
path = "src/lib.rs"

[[bin]]
name = "vesper"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "sync"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The dusk compiler, linked as a library. Vesper reuses its lexer, parser, and
# checker instead of reimplementing them. This pins the frozen Rust seed, the
# last Rust build of the compiler at v1.3.0, whose front end is the reference
# for the language surface through 1.2.0. The compiler itself now self hosts in
# dusk, so this crate is the fixed surface vesper analyzes against.
dusk = { package = "dusk-lang", path = "../../../../dusk-rust" }

# Used only to cap the process address space at startup, so a runaway in the
# linked compiler aborts at a ceiling instead of exhausting the machine.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
